# ClassRoom

./: .gitignore  CMakeLists.txt  FIREBASE_SETUP.md  IMPLEMENTATION.md  JSON_FORMAT.md  QUESTIONNAIRE_README.md  README.md  example_python_exam.json  sample_exam.json
backend/: .env.example  Cargo.toml  schema.sql
backend/src/: main.rs
backend/src/handlers/: auth.rs  classroom.rs  code.rs  course.rs  ebook.rs  flashcard.rs  mod.rs  note.rs  progress.rs  questionnaire.rs
backend/src/middleware/: auth.rs
backend/src/models/: classroom.rs  code_session.rs  course.rs  ebook.rs  flashcard.rs  mod.rs  note.rs  progress.rs  questionnaire.rs  user.rs
backend/src/utils/: code_executor.rs  db.rs  jwt.rs  mod.rs
frontend/: package-lock.json  package.json
frontend-student/: README.md  package.json
frontend-student/src/: App.css
frontend-student/src/components/: QuestionBank.tsx  QuestionCard.tsx  ResultsView.tsx
frontend-teacher/: VISUAL_GUIDE.md  index.html  package.json
frontend-teacher/src/: App.tsx
frontend-teacher/src/services/: firebase.ts  firestore.ts
frontend-teacher/src/types/: index.ts
frontend/src/: App.jsx
frontend/src/pages/: Classroom.jsx  Classrooms.jsx  Course.jsx  Login.jsx
frontend/src/services/: api.js  api.ts
include/: Question.h  Questionnaire.h  QuestionnaireLoader.h  SessionManager.h  StudentSession.h
src/: Question.cpp  Questionnaire.cpp  QuestionnaireLoader.cpp  SessionManager.cpp  StudentSession.cpp  json_exam_demo.cpp  main.cpp
tests/: CMakeLists.txt  test_json_loader.cpp  test_questionnaire.cpp
(+1 files in other folders)
